fixed starts svg not showing

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -185,7 +185,7 @@ ul {
   padding: 50px;
   width: 100%;
   overflow: hidden;
-  background: #161619 url(../../../assets/stars.svg) right top no-repeat;
+  background: #161619 url(../../../assets/star.svg) right top no-repeat;
   color: #a8a8b3;
   display: -webkit-box;
   display: -ms-flexbox;
